src/test/ui/issues/issue-25901.stderr
error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-25901.rs:4:24
   |
LL | static S: &'static B = &A;
   |                        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
